# simple-http-server

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.cargo/: config.toml
.ci/: build-linux-static.sh
.github/workflows/: build.yml
docker/: Dockerfile.aarch64  Dockerfile.x86_64  README.md
src/: color.rs  command_engine.rs  command_handler.rs  handler.rs  ldap_engine.rs  ldap_handler.rs  main.rs  memory_engine.rs  memory_handler.rs  path_engine.rs  path_handler.rs  redirect_engine.rs  redirect_handler.rs  scripts.rs  sql_engine.rs  sql_handler.rs  ssrf_engine.rs  ssrf_handler.rs  util.rs  xpath_engine.rs  xpath_handler.rs
src/middlewares/: auth.rs  compress.rs  logger.rs  mod.rs
