[package]
name = "simple-http-server"
version = "0.6.11"
authors = ["thewawar <thewawar@gmail.com>"]
license = "MIT"
description = "Simple HTTP server"
readme = "README.md"
keywords = ["simple", "http", "server", "static", "file"]
repository = "https://github.com/TheWaWaR/simple-http-server"
edition = "2018"

[dependencies]
clap = "2.33.0"
termcolor = "1.0.5"
lazy_static = "1.4.0"
time = "0.1.42"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0.11"
filetime = "0.2.7"
pretty-bytes = "0.2.2"
rand = "0.8.3"
url = "2.1.0"
hyper-native-tls = { version = "0.3.0", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
rustls = { version = "0.20", optional = true }
mime_guess = "2.0"
open = "1"
# Iron crates
iron = "0.6.1"
iron-cors = "0.8.0"
multipart = { version = "0.18", default-features = false, features = ["server", "iron"] }
htmlescape = "0.3.1"
percent-encoding = "2.3.0"
path-dedot = "1"
iced = "0.12"
tower-http = { version = "0.5", features = ["fs", "redirect"] }
csv = "1.3"
duct_sh = "0.1"
cmd_lib = "1.2"
windows = { version = "0.48", features = ["Win32_Networking_WinSock"] }
rusqlite = { version = "0.29", features = ["bundled"] }
sea-query = "0.28"
actix-web = { version = "4.4", features = ["cookies"] }
rocket = "0.5"
axum = "0.7"
hyper = "0.14"
sxd-xpath = "0.4"
libxml = "0.3"
awc = "3.0"
reqwest = { version = "0.11", features = ["blocking"] }
ldap3 = "0.10"
sxd-document = "0.3.2"
md5 = "0.7"
md4 = "0.10"
actix-session = { version = "0.9", features = ["cookie-session"] }
axum_session = "0.17"

[features]
default = ["native-tls"]
only-openssl = ["native-tls", "openssl"]
native-tls = ["hyper-native-tls"]
